update build.bat to error out like build.sh, also add bamboo.pl to clean when building