@@ -1,3 +1,3 @@
 @echo off
-set MAVEN_OPTS=-XX:PermSize=64M -XX:MaxPermSize=256M -Xmx1G
-maven\bin\mvn -Dmaven.test.skip.exec=true %*
+@echo "Don't use this script, use compile.pl and assemble.pl instead!"
+@exit 1
